<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_meeting"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lena.androidrest.CreateMeetingActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ScrollView01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_textview"
                style="@style/FontHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/create_meeting"/>

            <RelativeLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/meeting_name_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:labelFor="@+id/meeting_name_edittext"
                    android:paddingEnd="8dp"
                    android:text="@string/meeting_name"/>

                <EditText
                    android:id="@+id/meeting_name_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:ems="13"
                    android:inputType="textPersonName"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout1"
                android:paddingBottom="16dp"
                >

                <TextView
                    android:id="@+id/meeting_desc_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:text="@string/meeting_description"/>

                <EditText
                    android:id="@+id/meeting_desc_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:ems="13"
                    android:inputType="textMultiLine"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout2"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/meeting_start_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:text="@string/meeting_start"/>

                <TextView
                    android:id="@+id/meeting_start_date_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="13dp"
                    android:text="@string/meeting_textview_start_date"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout3"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/meeting_end_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:labelFor="@+id/meeting_end_edittext"
                    android:paddingEnd="8dp"
                    android:text="@string/meeting_end"/>

                <TextView
                    android:id="@+id/meeting_end_date_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="13dp"
                    android:text="@string/meeting_textview_end_date"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/layout4"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/meeting_priority_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:labelFor="@+id/meeting_priority_spinner"
                    android:paddingEnd="8dp"
                    android:text="@string/meeting_priority"/>

                <Spinner
                    android:id="@+id/meeting_priority_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:ems="13"/>

            </RelativeLayout>

            <Button
                android:id="@+id/meeting_create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="@string/meeting_create"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
